<resources>
    <string name="app_name">EngagerPRO</string>
    <string name="create_account"><font color="#00ff00">text</font></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="back_to_login">Back to Login</string>
    <string name="text_label_1">Register a Complaint</string>
    <string name="text_label_2">View all Complaints</string>
    <string name="hint_resource">Available Departments</string>

    <string name="hint_issues">Known issues:</string>
    <string name="applink1">
    <a href="https://jalshakti-ddws.gov.in/">Sanitation</a>
    </string>
    <string name="applink2">
    <a href="https://morth.nic.in/">Road Facilities</a>
    </string>
    <string name="applink3">
    <a href="https://www.google.com">Street Lamps</a>
    </string>
    <string name="applink4">
    <a href="https://www.google.com">Mosquito sprays</a>
    </string>
    <string name="applink5">
    <a href="https://www.google.com">Public toilet facilities</a>
    </string>
    <string-array name="planets_array">
        <item>Select a department</item>
        <item>Sanitation</item>
        <item>Road Facilities</item>
        <item>Street Lamps</item>
        <item>Mosquito sprays</item>
        <item>Public toilet facilities</item>
    </string-array>
    <string-array name="sanitation_array">
        <item>Select an issue</item>
        <item>Pipeline broken</item>
        <item>Drainage open</item>
        <item>Garbage not collected</item>
        <item>Improper disposal of biodegradable waste</item>
        <item>Public toilets not cleaned</item>
    </string-array>

</resources>
